  * add a patch from Niko Tyni avoiding two warnings about use of uninitialized
    values, which break tests under Perl 5.12. (Closes: #578481)
  * add a patch fixinf spelling errors in POD and other documentation
  * add a patch fixinng POD errors
  * add a patch fixing bad manpage whatis name
  * Standards-Version: 3.8.4
    + support 'nockeck' in DEB_BUILD_OPTIONS as per Policy 3.8.1

 -- Damyan Ivanov <dmn@debian.org>  Mon, 01 Feb 2010 07:22:55 +0200

libapache2-mod-perl2 (2.0.4-6) unstable; urgency=high

  [ gregor herrmann ]
  * debian/control: Changed: (build-)depend on perl instead of perl-
    modules.

  [ Dario Minnucci ]
  * docs/index_top.html: Issued patch 099-fix-url-on-index_top.patch 
    to fix link URL. (Closes: #507606)

  [ Damyan Ivanov ]
  * add 100-svn-XSS-Status.patch; fixes XSS in Apache2::Status (CVE-2009-0796)
    Patch taken from r760926 of upstream SVN.
    Closes: #567635
  * .docs: drop debian/NEWS.Debian and Changes
  * -doc: depend on ${misc:Depends}
  * drop debian/NEWS (documents changes before oldstable)

 -- Damyan Ivanov <dmn@debian.org>  Sat, 30 Jan 2010 18:00:43 +0200

libapache2-mod-perl2 (2.0.4-5) unstable; urgency=low

  [ gregor herrmann ]
  * debian/control: Changed: Switched Vcs-Browser field to ViewSVN
    (source stanza).

  [ Damyan Ivanov ]
  * add 010-doc-no-more-send_http_header.patch removing a forgotten
    send_http_header that is no nonger available in Registry.pod
    Closes: #507821 -- Can't locate object method "send_http_header" via
                       package "Apache2::RequestRec"

  [ gregor herrmann ]
  * debian/control: Added: ${misc:Depends} to Depends: field.

  [ Gunnar Wolf ]
  * Added conditional dependency on libapache2-mpm-itk (together with
    apache2). (Closes: #508910)
  * Added patch which created a FTBFS with the libwww-perl 5.813 to 5.820
    update (acknowledged upstream, will be included in next release)
    (Closes: #509457)
  * reordered debian/patches/series to match reality  
