@@ -1,3 +1,8 @@
+Description: direct bug reports to Debian BTS
+Forwarded: not-needed
+Author: Gunnar Wolf <gwolf@debian.org>
+Last-Update: 2010-04-21
+
 --- a/lib/ModPerl/TestReport.pm
 +++ b/lib/ModPerl/TestReport.pm
 @@ -97,7 +97,11 @@ sub package2filename {
