@@ -1,3 +1,9 @@
+Description: allow building in parallel (make -j)
+ add some target inter-dependencies so that parallel building can be done
+Forwarded: no
+Author: Frank Lichtenheld <djpig@debian.org>
+Last-Update: 2010-04-21
+
 --- a/Makefile.PL
 +++ b/Makefile.PL
 @@ -738,7 +738,9 @@ sub MY::install {
