@@ -10,6 +10,7 @@ libapache2-mod-perl2 (2.0.4-7) UNRELEASED; urgency=low
   * add a patch fixing bad manpage whatis name
   * Standards-Version: 3.8.4
     + support 'nockeck' in DEB_BUILD_OPTIONS as per Policy 3.8.1
+  * describe all patches
 
  -- Damyan Ivanov <dmn@debian.org>  Mon, 01 Feb 2010 07:22:55 +0200
 
